examples/test/testpolicy2679.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2679
  namespace: namespace211
spec:
  podSelector:
    matchLabels:
      key31: value9
      key45: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value48
          key15: value43
      podSelector:
        matchLabels:
          key36: value47
          key25: value33
          key6: value32
